fixing overflow horizontal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -214,3 +214,11 @@
 .font-righteous {
   font-family: var(--font-righteous);
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
